--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,8 +1,16 @@
-Django>=4.2.0
-djangorestframework>=3.14.0
-django-cors-headers>=4.3.0
-python-dotenv>=1.0.0
-google-generativeai>=0.3.0
-PyPDF2>=3.0.0
-python-docx>=1.0.0
+Django==4.2.21
+django-allauth==65.8.1
+django-cors-headers==4.7.0
+django-crispy-forms==2.4
+djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.0
+google-auth==2.40.2
+google-generativeai==0.3.2
+gunicorn==21.2.0
+numpy==2.2.6
+Pillow==10.2.0
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
+python-dotenv==1.1.0
+PyPDF2==3.0.1
 pydantic>=2.0.0 
